--- a/about.html
+++ b/about.html
@@ -62,25 +62,24 @@
                 <li><a href="services.html">Services</a></li>
         
                 <li><a href="booking.html">Book Online</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                             <li ><a  style="background-color: #01bfcf; height: 6vh; width: 18vh; color: #fff; border-radius: 50px;" href="tel:+260970824685">Contact</a></li>
               </ul>
             </nav>
           </div>
 
           <div class="col-6 col-xl-2 text-right" data-aos="fade-down">
-            <div class="d-none d-xl-inline-block">
+
+           <div class="d-none d-xl-inline-block">
               <ul class="site-menu js-clone-nav ml-auto list-unstyled d-flex text-right mb-0" data-class="social">
                 <li>
-                  <a href="#" class="pl-0 pr-3 text-black"><span class="icon-facebook"></span></a>
+                  <a href="https://www.facebook.com/pinkykafula" class="pl-0 pr-3 text-black"><span class="icon-facebook"></span></a>
+                </li>
+                
+                <li>
+                  <a href="https://www.instagram.com/resolution_beauty?igsh=aG13M2NoZTB4NW92" class="pl-3 pr-3 text-black"><span class="icon-instagram"></span></a>
                 </li>
                 <li>
-                  <a href="#" class="pl-3 pr-3 text-black"><span class="icon-twitter"></span></a>
-                </li>
-                <li>
-                  <a href="#" class="pl-3 pr-3 text-black"><span class="icon-instagram"></span></a>
-                </li>
-                <li>
-                  <a href="#" class="pl-3 pr-3 text-black"><span class="icon-youtube-play"></span></a>
+                  <a href="https://www.tiktok.com/@resolution.beauty?_t=ZM-8ymbslTFDt8&_r=1" class="pl-3 pr-3 text-black"><i class="fab fa-tiktok"></i></a> 
                 </li>
               </ul>
             </div>
