--- a/index.html
+++ b/index.html
@@ -60,12 +60,13 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="booking.html">Book Online</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                 <li ><a  style="background-color: #01bfcf; height: 6vh; width: 18vh; color: #fff; border-radius: 50px;" href="tel:+260970824685">Contact</a></li>
               </ul>
             </nav>
           </div>
 
           <div class="col-6 col-xl-2 text-right" data-aos="fade-down">
+
             <div class="d-none d-xl-inline-block">
               <ul class="site-menu js-clone-nav ml-auto list-unstyled d-flex text-right mb-0" data-class="social">
                 <li>
